Add new function ExecuteQueryWithRetry

--- a/smcSummaryTrans/App.config
+++ b/smcSummaryTrans/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-      <add key="toEmail" value="phumsiri.sirimuratha@kingpower.com,yati.apichotbavorn@kingpower.com,sinsombat.jintavanich@kingpower.com,wipada.klungtes@kingpower.com,wichian_c@kingpower.com,w.sirahirunchanon@accenture.com" />
+      <add key="toEmail" value="phumsiri.sirimuratha@kingpower.com" />
+	  <add key="max_retry" value="3" />
     </appSettings>
 </configuration>
